welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:6: error: '(' expected but '{' found.
} else if {
          ^Runner:11: error: illegal start of simple expression
}
^